密码复杂性要求，EditText安全修复。

--- a/app/src/main/res/layout/lockscreen_verifypwd_lay.xml
+++ b/app/src/main/res/layout/lockscreen_verifypwd_lay.xml
@@ -36,12 +36,12 @@
                 android:layout_height="wrap_content"
                 android:text="密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd"
                 style="@style/editTextStyleBlcak"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="16"/>
+                android:maxLength="24"/>
         </LinearLayout>
         <LinearLayout
 
