--- a/app/src/main/res/layout/login_act.xml
+++ b/app/src/main/res/layout/login_act.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:text="用户名："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_name"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
@@ -82,12 +82,12 @@
                 android:layout_height="wrap_content"
                 android:text="密　码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="16"/>
+                android:maxLength="24"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/ly_verifyCode"
