--- a/app/src/main/res/layout/paypwd_modifypwd_act.xml
+++ b/app/src/main/res/layout/paypwd_modifypwd_act.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:text="旧密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd_old"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text="新密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:text="确认密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd_repeat"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
