--- a/app/src/main/res/layout/paypwd_setpwd_act.xml
+++ b/app/src/main/res/layout/paypwd_setpwd_act.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="确认密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd_repeat"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
