--- a/baseappresource/src/main/res/layout/dialog_password_input.xml
+++ b/baseappresource/src/main/res/layout/dialog_password_input.xml
@@ -30,7 +30,7 @@
         android:background="@drawable/popdialog_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <EditText
+        <com.ruomm.base.view.android.NullMenuEditText
 
             android:id="@+id/dialog_content"
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:layout_marginLeft="@dimen/dpx040"
             android:paddingTop="@dimen/dpx012"
             android:paddingBottom="@dimen/dpx012"
-            android:maxLength="16"
+            android:maxLength="24"
             style="@style/editTextStyleBlcak"
             />
     </LinearLayout>
