--- a/app/src/main/res/layout/paypwd_modifynopwdflag_act.xml
+++ b/app/src/main/res/layout/paypwd_modifynopwdflag_act.xml
@@ -30,12 +30,12 @@
                 android:layout_height="wrap_content"
                 android:text="用户密码："
                 />
-            <EditText
+            <com.ruomm.base.view.android.NullMenuEditText
                 android:id="@+id/edt_pwd_old"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="16"/>
+                android:maxLength="24"/>
         </LinearLayout>
 
         <LinearLayout
